[gd_scene load_steps=14 format=2]

[ext_resource path="res://liberals when (1).png" type="Texture" id=1]
[ext_resource path="res://Bloodthirsty.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Death Scene.gd" type="Script" id=3]
[ext_resource path="res://DeadPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Testing resources/Trump Town Pro.otf" type="DynamicFontData" id=5]
[ext_resource path="res://MinimalUI.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 200
outline_size = 4
outline_color = Color( 0, 0.0392157, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 200
outline_size = 4
outline_color = Color( 1, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
tracks/0/type = "bezier"
tracks/0/path = NodePath("BASED:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BASED:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BASED:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BASED:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("BASED:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "bezier"
tracks/0/path = NodePath("WOKE:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("WOKE:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("WOKE:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("WOKE:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("WOKE:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "button stuff"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Score_Counter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("highscore_counter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("buttons:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512.578, 308.453 )
scale = Vector2( 20.5421, 12.6093 )
texture = ExtResource( 1 )

[node name="Score_Counter" type="Label" parent="."]
margin_left = 256.776
margin_top = 291.698
margin_right = 560.776
margin_bottom = 345.698
custom_fonts/font = SubResource( 1 )
text = "SCORE: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore_counter" type="Label" parent="."]
margin_left = 256.776
margin_top = 345.698
margin_right = 560.776
margin_bottom = 409.698
custom_fonts/font = SubResource( 2 )
text = "HIGHSCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WOKE" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 297.409
margin_top = 82.6981
margin_right = 773.409
margin_bottom = 291.698
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.12549, 0.454902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "WOKE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BASED" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 297.409
margin_top = 82.6981
margin_right = 773.409
margin_bottom = 291.698
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.454902, 0, 0, 1 )
text = "BASED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="."]
margin_left = 256.776
margin_top = 391.08
margin_right = 812.776
margin_bottom = 519.08
rect_rotation = 360.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="buttons"]
margin_right = 556.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "RETRY"

[node name="Quit" type="Button" parent="buttons"]
margin_top = 44.0
margin_right = 556.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_Animation" type="AnimationPlayer" parent="."]
anims/BASED = SubResource( 5 )
anims/WOKE = SubResource( 6 )

[node name="DeadPlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( 1212.04, 131.032 )
scale = Vector2( 5.493, 5.493 )

[node name="Button_animation" type="AnimationPlayer" parent="."]
"anims/button stuff" = SubResource( 7 )

[connection signal="pressed" from="buttons/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="buttons/Quit" to="." method="_on_Quit_pressed"]
